# pwned-check

./: Cargo.toml  README.md  rust-toolchain
.github/workflows/: rust.yml
benches/: common.rs  find.rs  hashing.rs  memory.rs  simd.rs
src/: collect.rs  find.rs  logger.rs  main.rs
src/find/: advise.rs  parse.rs
