[package]
name = "pwned-check"
description = "Check an exported list of passwords against the offline password hash database of haveibeenpwned"
version = "0.1.0"
authors = ["games647 <games647@users.noreply.github.com>"]
edition = "2018"

[dependencies]
# Crypto-library
ring = "0.16"

# CSV file reading
csv = "1.1"

# Thread communication by channel - supports more things than std
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"

# Get the number of logical CPU
num_cpus = "1.13"

# Parallel iterator
rayon = "1.5"

# Serialization and deserialization library
serde = { version = "1", features = ["derive"] }

# Much faster implementation for converting byte to hex instead of using `.map(|x| format!("{:02x}", x))`
data-encoding = "2.3"

# CLI argument parsing
[dependencies.clap]
version = "3.0.0-beta.2"

# Disable suggesttions feature
default-features = false
features = ["color", "derive", "std", "cargo"]

# Allows asserting to patterns - in this case easier for using assert_eq with nightly APIs
[dev-dependencies]
assert_matches = "1.4"

# Benchmarking tool, because #[bench] is a nightly only feature at the moment
# Source: https://doc.rust-lang.org/cargo/commands/cargo-bench.html
criterion = "0.3"

# Random generator
rand = "0.8"

[[bench]]
name = "hashing"
harness = false
