[package]
name = "pwned-check"
description = "Check an exported list of passwords against the offline password hash database of haveibeenpwned"
version = "0.1.0"
license = "Unlicense"
keywords = ["pwned", "password"]
authors = ["games647 <games647@users.noreply.github.com>"]
edition = "2018"

[dependencies]
# Lazy evalute expressions
lazy-init = "0.4"

# Clear memory of clear text credentials
secstr = { version = "0.4", features = ["serde"] }

# Statically generate array at compile time
init_with = "1.1"

# Crypto-library
ring = "0.16"

# CSV file reading
csv = "1.1"

# Thread communication by channel - supports more things than std
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"

# Get the number of logical CPU
num_cpus = "1.13"

# Serialization and deserialization library
serde = { version = "1", features = ["derive"] }

# Much faster implementation for converting byte to hex instead of using `.map(|x| format!("{:02x}", x))`
data-encoding = "2.3"

# Convert bytes of ASCII to numbers
atoi = "0.4"

# Line reading in bytes
[dependencies.bstr]
version = "0.2"

# Disable unicode
default-features = false
features = ["std"]

# CLI argument parsing with custom selection of features similar to serde
[dependencies.clap]
version = "3.0.0-beta.2"

# Disable suggesttions feature
default-features = false
features = ["color", "derive", "std", "cargo"]

# Dependencies for dev environments like tests and benchmarks
[dev-dependencies]
# Allows asserting to patterns - in this case easier for using assert_eq with nightly APIs
assert_matches = "1.4"

# Benchmarking tool, because #[bench] is a nightly only feature at the moment
# Source: https://doc.rust-lang.org/cargo/commands/cargo-bench.html
criterion = "0.3"

# Random generator
rand = "0.8"

# Parallel iterator
rayon = "1.5"

# Support for SIMD instructions
packed_simd_2 = "0.3"

# Alternative to hashset/map for more memory local indicies
indexmap = "1.6"

# Custom hasher implementations, but both are without DoS protection

# This has the possible to hash multiple bytes at the same time
fxhash = "0.2"

# Benchmark names

# Name refer to the file name - the group inside them indicate the command parameter name
# cargo bench NAME - for example cargo bench SIMD
[[bench]]
name = "hashing"
# Use criterion harness instead of our own
harness = false

[[bench]]
name = "simd"
harness = false

[[bench]]
name = "find"
harness = false

[[bench]]
name = "memory"
harness = false
